# regional-symb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  町内会管理システム_モバイルアプリ要件定義書.md  町内会管理システム_要件定義書.md
.streamlit/: secrets.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: circular_boards.py  meetings.py  stock.py  whisper.py
backend/app/db/: event.json  kairanban.json  stock_data.json
backend/app/models/: resident.py
frontend/: app.py
frontend/modules/: admin.py  chat.py  dashboard.py  event_calendar.py  financial_report.py  func.py  kairanban.py  kairanban_detail.py  meeting.py  stock_list.py
src/region_project/: __init__.py
src/regional_symb/: __init__.py
