[project]
name = "region-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "OK220184\\yutominami", email = "ok220184@oks.iput.ac.jp" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "python-multipart>=0.0.20",
    "openai>=1.86.0",
    "openai-whisper>=20240930",
    "streamlit>=1.30",
    "streamlit-webrtc>=0.62.4",
    "requests>=2.32.4",
    "pydub>=0.25.1",
    "av>=14.4.0",
    "pandas>=2.3.0",
    "streamlit-calendar>=1.3.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/region_project"]
